# celo

./: Cargo.toml  README.md
.github/workflows/: rust-linux.yml  rust-windows-linux.yml  rust.yml
src/: cli.rs  main.rs
src/file/: decode.rs  encode.rs  mod.rs
src/image/: decode.rs  encode.rs  mod.rs
src/text/: decode.rs  encode.rs  mod.rs
