[package]
name = "celo"
version = "0.3.1"
edition = "2024"
description = "BMP Steganography tool"
license = "MIT"
repository = "https://github.com/voltatiasap-afk/celo"

[[bin]]
name = "celo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive", "cargo"] }
colored = "3.1.1"
image = "0.25.9"
